# prop-assist-twin

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: Dockerfile.lambda-build  context.py  deploy.py  index-kb.py  lambda_handler.py  me.txt  pyproject.toml  requirements.txt  server.py
backend/data/: facts.json  style.txt  summary.txt
backend/data/kb/: areas.md  buying_process.md  company_faq.md  property-listings.md  service_areas.md
backend/tests/: conftest.py  test_chat_api.py  test_retrieve_sources.py
frontend/: next.config.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: twin.tsx
scripts/: deploy.sh
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
